--- a/RestockList/View/Base.lproj/Main.storyboard
+++ b/RestockList/View/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
         <!--Restock List-->
         <scene sceneID="5iX-Yk-WKQ">
             <objects>
-                <tableViewController id="mnu-J1-1eu" customClass="ViewController" customModule="RestockList" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="Main" id="mnu-J1-1eu" customClass="TableViewController" customModule="RestockList" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="acE-1b-0fM">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -169,8 +169,8 @@
                         </prototypes>
                         <sections/>
                         <connections>
-                            <outlet property="dataSource" destination="mnu-J1-1eu" id="v9O-N7-A71"/>
-                            <outlet property="delegate" destination="mnu-J1-1eu" id="FfW-5G-81N"/>
+                            <outlet property="dataSource" destination="mnu-J1-1eu" id="oqc-xf-0n9"/>
+                            <outlet property="delegate" destination="mnu-J1-1eu" id="z96-nX-A8L"/>
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Restock List" id="YFM-aQ-jwO">
@@ -185,7 +185,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="myTableView" destination="acE-1b-0fM" id="WW2-53-9pN"/>
+                        <outlet property="myTableView" destination="acE-1b-0fM" id="Tej-DM-Dys"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vG7-TU-xfm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
