--- a/RestockList/View/Base.lproj/Main.storyboard
+++ b/RestockList/View/Base.lproj/Main.storyboard
@@ -411,6 +411,34 @@
             </objects>
             <point key="canvasLocation" x="1342" y="-514"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="Fz6-Fx-t4U">
+            <objects>
+                <viewController id="G2H-NW-Fjt" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="FZi-kS-1tn">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ProView" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nv8-lO-wSw">
+                                <rect key="frame" x="176" y="437.5" width="62" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="P1e-w6-KyV"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Nv8-lO-wSw" firstAttribute="centerY" secondItem="FZi-kS-1tn" secondAttribute="centerY" id="kE9-zU-iYI"/>
+                            <constraint firstItem="Nv8-lO-wSw" firstAttribute="centerX" secondItem="FZi-kS-1tn" secondAttribute="centerX" id="qSt-dS-fMt"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="Ksj-ye-fMl"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="14F-nJ-zg2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2117" y="-514"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="InE-IH-YOL">
             <objects>
@@ -497,6 +525,9 @@
                                                 <constraint firstItem="hwM-1u-xlQ" firstAttribute="centerY" secondItem="TA6-zc-KpF" secondAttribute="centerY" id="Rxb-ok-dd2"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="G2H-NW-Fjt" kind="show" id="cmw-8I-qY8"/>
+                                        </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="haC-cy-sTD">
                                         <rect key="frame" x="20" y="96" width="374" height="46.5"/>
